Add database. Change packages path.

--- a/samples/Geta.ScheduledParameterJob.Sample/Web.config
+++ b/samples/Geta.ScheduledParameterJob.Sample/Web.config
@@ -374,6 +374,7 @@
           <add assembly="EPiServer.Find.Blocks" />
           <add assembly="EPiServer.Find.Cms" />
           <add assembly="EPiServer.Find.Framework" />
+          <add assembly="Geta.ScheduledParameterJob" />
         </assemblies>
       </add></protectedModules>
   </episerver.shell>
