--- a/samples/Geta.ScheduledParameterJob.Sample/Geta.ScheduledParameterJob.Sample.csproj
+++ b/samples/Geta.ScheduledParameterJob.Sample/Geta.ScheduledParameterJob.Sample.csproj
@@ -381,6 +381,8 @@
     <Compile Include="Models\ViewModels\VideoViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Test\DefinitionSample.cs" />
+    <Compile Include="Test\SampleParameterJob.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Geta.ScheduledParameterJob.csproj">
