--- a/src/Geta.ScheduledParameterJob/Geta.ScheduledParameterJob.nuspec
+++ b/src/Geta.ScheduledParameterJob/Geta.ScheduledParameterJob.nuspec
@@ -11,7 +11,8 @@
     <description>This package allows the creation of scheduled Job with parameters</description>
     <releaseNotes>EPiServer Scheduled Job with parameters</releaseNotes>
     <copyright>Copyright Geta 2018</copyright>
-	<iconUrl>http://cdn.geta.no/opensource/icons/icon-core-32x32.png</iconUrl>
+    <iconUrl>http://cdn.geta.no/opensource/icons/icon-core-32x32.png</iconUrl>
+    <repository type="git" url="URL" branch="BRANCH_NAME" commit="COMMIT" />
     <dependencies>
       <dependency id="EPiServer.CMS.Core" version="[11.3.3, 12)" />
 	  <dependency id="EPiServer.CMS.UI" version="[11.2.3, 12)" />
